Segundo commit - Adição de campos de busca e paginação

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -7,6 +7,7 @@
 <table class="table">
     <thead>
         <tr>
+            <th scope="col">ID</th>
             <th scope="col">Nome</th>
             <th scope="col">Sobrenome</th>
             <th scope="col">Telefone</th>
@@ -15,15 +16,35 @@
     </thead>
     <tbody>
         {% for contato in contatos %}
+            {% if contato.mostrar %}
         <tr>
+            <td>{{contato.id}}</td>
             <td scope='row'><a href="{% url 'ver_contato' contato.id %}">{{ contato.nome }}</a></td>
             <td>{{ contato.sobrenome }}</td>
             <td>{{ contato.telefone }}</td>
             <td>{{ contato.categoria }}</td>
+            <td><input type="checkbox" name="" id="" 'contato.mostrar' ></td>
+
         </tr>
-        
+            {% endif %}        
         {% endfor %}
         
     </tbody>
 </table>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+        {% for pagina in contatos.paginator.page_range %}
+            {% if contatos.number == pagina %}
+            <li class="page-item active">
+                <a class="page-link" href="?p={{ pagina }}">{{pagina}}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="?p={{ pagina }}&termo={{ request.GET.termo }}">{{pagina}}</a>
+            </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+  </nav>
 {% endblock %}
