--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     {% include 'components/_navbar.html' %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <br><br>
+                <form action="{% url 'busca' %}" method="get">
+                    <div class="form-group row">
+                        <div class="col-12">
+                            <input class="form-control" type="search" value="{{ request.GET.termo }}" name="termo" id="search-input" placeholder="Digite sua pesquisa">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <br>
     
     {%block conteudo%}
     {%endblock%}
