--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
                     <div class="form-group row">
                         <div class="col-12">
                             <input class="form-control" type="search" value="{{ request.GET.termo }}" name="termo" id="search-input" placeholder="Digite sua pesquisa">
+                            {% include 'components/_messages.html' %}
                         </div>
                     </div>
                 </form>
