Conclusão do modulo de usuários - accounts.

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
     {% include 'components/_head.html' %}
-    <title>Agenda - {%block titulo%}{%endblock%}</title>
+    <title>Agenda | {%block titulo%}{%endblock%}</title>
     
 </head>
 <body class="container">
