--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,25 @@
 {% extends 'base.html' %}
 
 {% block conteudo %}
-login
+
+{% if not user.is_authenticated %}
+
+<h1 class="mt-3 mb-3">Login</h1>
+        <form method="POST" action="{% url 'login' %}">
+            {% include 'components/_messages.html' %}
+            {% csrf_token %}
+            <div class="form-group">
+                <label>Usuário</label>
+                <input type="text" class="form-control" value="{{request.POST.usuario}}" name='usuario'>
+            </div>
+            <div class="form-group">
+                <label for>Senha</label>
+                <input type="password" class="form-control" name='senha'>
+            </div>
+            <button type="submit" class="btn btn-primary">Entrar</button>
+        </form>
+{% else %}
+        <p>Você fez login como {{user}}, <a href="{% url 'logout' %}"> clique aqui</a> para sair.</p>
+
+{% endif %}
 {% endblock %}
