--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -6,27 +6,27 @@
             {% include 'components/_messages.html' %}
             {% csrf_token %}
             <div class="form-group">
-                <label for="exampleInputEmail1">Nome</label>
-                <input type="text" class="form-control" name='nome'>
+                <label>Nome</label>
+                <input type="text" class="form-control" value="{{request.POST.nome}}" name='nome'>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Sobrenome</label>
-                <input type="text" class="form-control" name='sobrenome'>
+                <label>Sobrenome</label>
+                <input type="text" class="form-control" value="{{request.POST.sobrenome}}" name='sobrenome'>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Email</label>
-                <input type="email" class="form-control" name='email'>
+                <label>Email</label>
+                <input type="email" class="form-control" value="{{request.POST.email}}" name='email'>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Usuario</label>
-                <input type="text" class="form-control" name='usuario'>
+                <label>Usuário</label>
+                <input type="text" class="form-control" value="{{request.POST.usuario}}" name='usuario'>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Senha</label>
+                <label for>Senha</label>
                 <input type="password" class="form-control" name='senha'>
             </div>
             <div class="form-group">
-                <label for="exampleInputEmail1">Repetir Senha</label>
+                <label>Repetir Senha</label>
                 <input type="password" class="form-control" name='senha2'>
             </div>
             <button type="submit" class="btn btn-primary">Cadastrar-me</button>
