--- a/core/templates/core/ver_contato.html
+++ b/core/templates/core/ver_contato.html
@@ -1,5 +1,5 @@
 {%extends 'base.html'%}
-{%block titulo%}{{contato.nome}}{%endblock%}
+{%block titulo%}{{contato.nome}} {{contato.sobrenome}}{%endblock%}
 {%block conteudo%}
     <div class="container">
         <div class="row">
