--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -5,5 +5,6 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <a class="navbar-brand" href="{% url 'login' %}">Logout</a>
     </div>
 </nav>
